--- a/jobcentral.css
+++ b/jobcentral.css
@@ -1,9 +1,10 @@
-#job_central
+﻿#job_central
 {
     font-size: 12px;
     color: #000;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-top: -25px;
+    margin-left: -3px;
+    margin-right: 0px;
     height: 80%;
     width: 95%;
     position: static;
@@ -15,40 +16,44 @@
     width: 100%;
 }
 
+#footer
+{
+    z-index: 2;
+}
+
+#panels
+{
+    white-space: pre-wrap;
+}
+
 .job
 {
     border: 1px solid #000;
+    font-size: 10px;
+    height: 32px;
 }
 
 .right
 {
     float: right;
-    margin-right: 12px;
+    margin-right: 5px;
+}
+
+.ui-panel.ui-panel-open 
 {
+    position:fixed;
+    z-index: 1;
+    top: 45px;
     width: 100%;
 }
 
-.job
+.ui-panel-inner 
 {
-    border: 1px solid #000;
-}
-
-.right
-{
-    float: right;
-    margin-right: 12px;
-}
-
-.ui-panel.ui-panel-open {
-    position:fixed;
-}
-.ui-panel-inner {
     position: absolute;
     top: 1px;
     left: 0;
     right: 0;
-    bottom: 0px;
+    bottom: 0;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
 }
-
