--- a/social_proto.css
+++ b/social_proto.css
@@ -1,11 +1,14 @@
-.twitter
+.post
 {
-	border:1px solid black;
-	border-radius: 5px;
+/*	border:1px solid #666;*/
+    border-bottom: 1px solid #666;
+/*    border-right: 1px solid #666;*/
+/*	border-radius: 1px;*/
 	padding: 10px 10px;
 	margin-top: 5px;
+    background-color: white;
 }
-.twitter img
+.post img
 {
 	float: left;
 }
@@ -13,12 +16,7 @@ b
 {
 	font-weight: bold;
 }
-#w
-{
-    float: left;
-}
-#h {
-    float: right;
+
 }
 .first
 {
@@ -26,5 +24,24 @@ b
 */}
 .last
 {
-	margin-bottom: 70px;
+	margin-bottom: 5px;
+}
+.post p:nth-of-type(2)
+{
+	/*display:inline;*/
+}
+.post p span span
+{
+	padding-left: 1em;
+	color: teal;
+	font-size: .75em;
+	font-style: italic;
+}
+
+.post p span span:hover {
+    text-decoration: underline;
+}
+.post p span:nth-of-type(2)
+{
+	display:none;
 }
