--- a/jobcentral.css
+++ b/jobcentral.css
@@ -1,19 +1,45 @@
-﻿#job_central
+#job_central
 {
     font-size: 12px;
     color: #000;
-    margin-top: -25px;
+    margin-top: 50px;
     margin-left: -3px;
     margin-right: 0px;
     height: 80%;
     width: 95%;
     position: static;
-    z-index: -1;
+    z-index: -1 !important;
+}
+
+#opened {
+    float:right !important;
+    margin-left: 130px;
+    margin-top: -30px;
+    background-color: whitesmoke;
+}
+
+#space {
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    z-index: 1 !important;
+    background-color: whitesmoke;
+}
+
+#posting {
+    margin-left: 5px;
+    background-color: whitesmoke;
+}
+
+.fixed {
+    position: fixed;
+    z-index: 2 !important;
 }
 
 #jobs_list
 {
     width: 100%;
+    z-index: -1 !important;
 }
 
 #footer
@@ -24,6 +50,7 @@
 #panels
 {
     white-space: pre-wrap;
+    z-index: 999;
 }
 
 .job
