--- a/main.css
+++ b/main.css
@@ -24,9 +24,11 @@ body {
 	background-color: #C81F45;
 	color: #FFF;
 	width: 100%;
+    top: -1;
 	/*height: 10%;*/
 	text-align: center;
 }
+
 
 .right { 
 	float:right !important;
@@ -45,7 +47,7 @@ body {
 .ui-block-a {
 	height: 50px !important;
 }
-#official
+#official, #twitter_main, #facebook_main, #instagram_main, #youtube_main, #blog_main
 {
 	padding: .2em .5em .5em .5em !important;
 }
