--- a/social_proto.css
+++ b/social_proto.css
@@ -1,9 +1,10 @@
 .post
 {
 /*	border:1px solid #666;*/
-    border-bottom: 1px solid #666;
+/*    border-bottom: 1px solid #666;*/
 /*    border-right: 1px solid #666;*/
 /*	border-radius: 1px;*/
+    box-shadow: 5px 5px 5px #888888;
 	padding: 10px 10px;
 	margin-top: 5px;
     background-color: white;
