--- a/social_proto.css
+++ b/social_proto.css
@@ -1,9 +1,5 @@
 .post
 {
-/*	border:1px solid #666;*/
-/*    border-bottom: 1px solid #666;*/
-/*    border-right: 1px solid #666;*/
-/*	border-radius: 1px;*/
     box-shadow: 5px 5px 5px #888888;
 	padding: 10px 10px;
 	margin-top: 5px;
@@ -26,9 +22,16 @@
 }
 .post_time
 {
+    position: relative;
+    height: 1em;
     font-size: .75em;
     font-style: italic;
     color: grey;
+    margin-top: 2px;
+}
+.post_time span
+{
+    float:right;
 }
 .post img
 {
@@ -38,8 +41,10 @@
 .post_content
 {
     display: block;
+/*
     border-bottom: 1px dashed red;
     border-top: 1px dashed red;
+*/
 }
 b
 {
