--- a/events-Ken-2.css
+++ b/events-Ken-2.css
@@ -2,33 +2,36 @@
     overflow: hidden;
 }
 
+/*
 #events_wrapper
 {
-    height:75%;
+	width: 100% !important;
+	height: 100% !important;
+	position: fixed;
 }
+*/
 
 #event_form, #event_list
 {
 	position:fixed !important;
     width: 100%;
-	height: 23.5%;
+	height: 50%;
 }
 /*
 #event_map
 {
-	height:130%;
+	position:fixed;
 }
 */
 
 #event_form, #event_list {
-    top: 70%;
+    top: 55%;
 }
 
 #event_form
 {
 	background-color: #000;
 	color: #fff;
-    height:30%;
 }
 
 #event_list
@@ -66,11 +69,9 @@
     position: relative;
     
 }
-/*
 .list_marker:last-of-type {
     margin-bottom: 62px;
 }
-*/
 
 .list_marker div
 {
@@ -89,6 +90,7 @@
     margin 0px;
     width: 35px;
 }
+
 #event_form ul
 {
 	list-style: none;
@@ -97,19 +99,10 @@
 }
 #event_form ul li
 {
+
 	margin:0;
 	padding: 0;
 }
-#event_form ul li:last-of-type
-{
-    display:inline;
-}
-
-#event_form div
-{
-    text-shadow:none; !important
-}
-
 .error
 {
 	border: 2px solid red;
@@ -117,14 +110,4 @@
 .glow
 {
 	box-shadow: 0px 0px 15px 5px #FF0000;
-}
-div.ui-btn
-{
-    width:38.5%;
-    float:left;
-}
-
-div.ui-btn:last-of-type
-{
-    float:right;
 }
