--- a/jobcentral.css
+++ b/jobcentral.css
@@ -2,7 +2,7 @@
 {
     font-size: 12px;
     color: #000;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     margin-left: -3px;
     margin-right: 0px;
     height: 80%;
@@ -11,29 +11,9 @@
     z-index: -1 !important;
 }
 
-#opened {
-    float:right !important;
-    margin-left: 130px;
-    margin-top: -30px;
-    background-color: whitesmoke;
-}
-
-#space {
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    z-index: 1 !important;
-    background-color: whitesmoke;
-}
-
-#posting {
-    margin-left: 5px;
-    background-color: whitesmoke;
-}
-
-.fixed {
-    position: fixed;
-    z-index: 2 !important;
+.blue {
+    color: blue;
+    font-weight: normal;
 }
 
 #jobs_list
@@ -55,16 +35,50 @@
 
 .job
 {
-    border: 1px solid #000;
-    font-size: 10px;
-    height: 32px;
+    border-left: 1px solid #e0e0e0;
+    border-top: 1px solid #e0e0e0;
+    box-shadow: 5px 5px 5px #888888;
+    padding: 10px 10px;
+    margin-top: 5px;
+    background-color: white;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 14px;
+    height: 20%;
 }
 
-.right
+
+
+.job_title {
+    white-space: normal !important;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 2px;
+    font-weight: bold;
+
+    
+}
+
+.open {
+    text-align: right;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+
+.normalfont {
+    font-weight: normal !important;
+}
+
+/*.right
 {
     float: right;
+    top: 10;
     margin-right: 5px;
-}
+    margin-top: 20px;
+}*/
 
 .ui-panel.ui-panel-open 
 {
@@ -74,6 +88,15 @@
     width: 100%;
 }
 
+
+/*#job_page
+{
+    position:fixed;
+    z-index: 1;
+    top: 45px;
+    width: 100%;
+}
+*/
 .ui-panel-inner 
 {
     position: absolute;
