--- a/main-Ken.css
+++ b/main-Ken.css
@@ -65,28 +65,20 @@ body {
 {
     width: 100%;
 }
-.inner_refresh
-{
-    text-align: center;
-}
 .refresh p, .refresh img
 {
-    margin: 0 !important;
-    padding:0 !important;
+    margin: 0;
+    padding:0;
 }
 .refresh p
 {
     line-height:.8em;
     font-size: .8em;
-
+    text-align: center;
 }
 .refresh img
 {
-
-}
-.swiper
-{
-    width: 100%;
-    height: 5em;
-    background-color: #000;
+    margin-left:auto;
+    margin-right: auto;
+    padding: 0 auto 0 auto;
 }
