--- a/jobcentral.css
+++ b/jobcentral.css
@@ -2,7 +2,7 @@
 {
     font-size: 12px;
     color: #000;
-    /*margin-top: 50px;*/
+    margin-top: -20px;
     margin-left: -3px;
     margin-right: 0px;
     height: 80%;
@@ -27,10 +27,9 @@
     z-index: 2;
 }
 
-#panels
+.job_details_div h3
 {
-    white-space: pre-wrap;
-    z-index: 999;
+    word-wrap: break-word;
 }
 
 .job
