--- a/social_proto.css
+++ b/social_proto.css
@@ -1,5 +1,7 @@
 .post
 {
+    border-left: 1px solid #e0e0e0;
+    border-top: 1px solid #e0e0e0;
     box-shadow: 5px 5px 5px #888888;
 	padding: 10px 10px;
 	margin-top: 5px;
