--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ h1 {
 
 body {
 	background-color: white;
-/*	color: black;*/
+	color: black;
 	overflow: hidden;
 	max-width: 100%;
 	margin: 0;
@@ -46,7 +46,6 @@ body {
 
 .menubar {
 	height: 47px !important;
-<<<<<<< HEAD
 	width: 105% !important;
 	position: fixed;
 	background: whitesmoke;
@@ -69,23 +68,11 @@ body {
 
 .menulist li {
     background: whitesmoke;
-=======
-	/*width: 100% !important;*/
-	position: relative;
-    /*left: 17.5%;*/
-	margin-left: -17.5px;
-}
-
-.menulist li {
->>>>>>> 681308f876f0877f8e6a14ac92feae683c5ae66a
 	display: inline;
 }
 
 .social_icons {
-<<<<<<< HEAD
     background: whitesmoke;
-=======
->>>>>>> 681308f876f0877f8e6a14ac92feae683c5ae66a
 	font-size: 35px;
 	padding: 2px;
 	height: 35px;
