--- a/events.css
+++ b/events.css
@@ -6,19 +6,22 @@
 {
     height:75%;
 }
-
+/*
+#event_map
+{
+    height: 30% !important;
+}
+#event_map:focus
+{
+    height: 70% !important;   
+}
+*/
 #event_form, #event_list
 {
 	position:fixed !important;
     width: 100%;
 	height: 23.5%;
 }
-/*
-#event_map
-{
-	height:130%;
-}
-*/
 
 #event_form, #event_list {
     top: 70%;
@@ -39,6 +42,15 @@
     overflow-y: scroll;
     width: 105.5%;
 }
+#event_list_rrc
+{
+    font-size: .9em;
+    background-color: #C81F45;
+    padding: 0;
+    overflow-y: scroll;
+    width: 105.5%;
+}
+
 .list_marker
 {
  	width: 97%;
@@ -51,10 +63,10 @@
     padding-bottom: 0px;
 }
 
-#content
+#list_content
 {
 /*    padding-top:10px;*/
-    font-size: 1.2em;
+    font-size: 1em;
     padding-bottom:0px;
 }
 #time
@@ -66,18 +78,10 @@
     position: relative;
     
 }
-/*
-.list_marker:last-of-type {
-    margin-bottom: 62px;
-}
-*/
 
 .list_marker div
 {
-	/*display: inline-block;
-	margin: 0 5px 0 5px;*/
-/*	padding: 5px 5px 5px 5px;*/
-/*    height:90%;*/
+
     width:93%;
     background-color: #fff;
     padding: 0;
@@ -86,8 +90,9 @@
 {
     float:left;
     padding:0;
-    margin 0px;
-    width: 35px;
+    margin: 0px;
+    width: 32px;
+    height: 32px;
 }
 #event_form ul
 {
@@ -107,7 +112,7 @@
 
 #event_form div
 {
-    text-shadow:none; !important
+    text-shadow:none;
 }
 
 .error
@@ -127,4 +132,17 @@ div.ui-btn
 div.ui-btn:last-of-type
 {
     float:right;
+}
+#list_content p
+{
+    font-size:0.75em;
+}
+#events_error
+{
+    
+}
+.selectedCampus
+{
+    background:#000000;
+    color:#FFFFFF;
 }
