--- a/settings.css
+++ b/settings.css
@@ -1,3 +1,12 @@
+#settings
+{
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0 !important;
+	padding-top: 10%;
+}
 #avatar_input input
 {
 	width: 100%;
@@ -10,4 +19,57 @@
 	overflow-y:scroll;
 	height: 15em;
 	word-wrap:break-word;
+}
+#avatar_thumbnail, #img_thumbnail
+{
+    
+    width: 35px;
+    height: 35px;
+    border: 1px solid green;
+}
+#img_thumbnail
+{
+    
+
+}
+#profile
+{
+	margin: 0;
+	padding: 44px 0 35px 0;
+}
+#profile_save
+{
+	float: right;
+}
+#profile_save a
+{
+/*	font-weight: bold !important;
+*/	text-decoration: none !important;
+	color:white !important;
+	display: block;
+	margin-top: 1em;
+	margin-right: 1em;
+	font-weight: normal;
+}
+#profile_user_info
+{
+	margin:20px 0;
+	padding: 0;
+	width: 100%;
+	position: relative;
+}
+#profile_avatar
+{
+	width: 30%;
+	height: 30%;
+	border-radius: 20px;
+	border: 2px dashed grey;
+	margin: 0 auto;
+	margin-bottom: 20px;
+	display: block;
+
+}
+#profile_screen_name
+{
+	border-top: 1px solid black;
 }
