--- a/jobcentral.css
+++ b/jobcentral.css
@@ -1,19 +1,35 @@
-﻿#job_central
+#job_central
 {
     font-size: 12px;
     color: #000;
-    margin-top: -25px;
+    margin-top: -20px;
     margin-left: -3px;
     margin-right: 0px;
     height: 80%;
     width: 95%;
     position: static;
-    z-index: -1;
+    z-index: -1 !important;
+}
+
+#job_wrapper
+{
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.blue {
+/*
+    color: blue;
+    font-weight: normal;
+*/
+    display: none;
 }
 
 #jobs_list
 {
     width: 100%;
+    z-index: -1 !important;
 }
 
 #footer
@@ -21,23 +37,92 @@
     z-index: 2;
 }
 
-#panels
+#job_details
 {
-    white-space: pre-wrap;
+    height: 100%;
+    width: 100%;
+    display: none;
+    z-index: 999;
+    padding-top: 50px;
+    padding-left: 15px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+
+}
+
+#job_details_title
+{
+    font-weight: bold;
+    font-size: 24px;
+    padding-right: 30px;
+}
+
+#job_details_open_date
+{
+    font-style: italic;
+    color: #666;
+}
+
+#job_details_desc
+{
+    margin-top: 10px;
+    padding-right: 25px;
+    font-size: 17px;
 }
 
 .job
 {
-    border: 1px solid #000;
-    font-size: 10px;
-    height: 32px;
+/*
+    border-left: 1px solid #e0e0e0;
+    border-top: 1px solid #e0e0e0;
+*/  border-bottom: solid 1px #e0e0e0;
+    padding: 10px 10px;
+    margin-top: 5px;
+    background-color: white;
+    margin-top: 15px;
+    font-size: 14px;
+    height: 20%;
 }
 
-.right
+
+
+.job_title {
+    white-space: normal !important;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 2px;
+    font-weight: bold;
+
+    
+}
+
+.job_open_date {
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-bottom: 15px;
+    color: #666;
+    font-style: italic;
+}
+
+.job_desc {
+    margin-left: 5px;
+    margin-bottom: 15px;
+}
+
+.normalfont {
+    font-weight: normal !important;
+}
+
+/*.right
 {
     float: right;
+    top: 10;
     margin-right: 5px;
-}
+    margin-top: 20px;
+}*/
 
 .ui-panel.ui-panel-open 
 {
@@ -47,6 +132,15 @@
     width: 100%;
 }
 
+
+/*#job_page
+{
+    position:fixed;
+    z-index: 1;
+    top: 45px;
+    width: 100%;
+}
+*/
 .ui-panel-inner 
 {
     position: absolute;
