--- a/social_proto.css
+++ b/social_proto.css
@@ -1,30 +1,96 @@
-.twitter
+.post
 {
-	border:1px solid black;
-	border-radius: 5px;
-	padding: 10px 10px;
-	margin-top: 5px;
+    /*border-left: 1px solid #e0e0e0;*/
+    /*border-top: 1px solid #e0e0e0;*/
+    /*box-shadow: 5px 5px 5px #888888;*/
+    border-bottom: solid 1px #e0e0e0;
+    padding: 10px 10px 25px 10px;
+    margin-top: 10px;
+    background-color: white;
 }
-.twitter img
+.post_user_name
 {
-	float: left;
+    display:inline;
+    margin-left: 50px;
 }
-b
+
+.post_user_name
 {
-	font-weight: bold;
+    font-size: .9em;
+    color: blue;
 }
-#w
+.post_time
+{
+    position: relative;
+    height: 1em;
+    font-size: .75em;
+    font-style: italic;
+    color: gray;
+    margin-top: 5px;
+    margin-left: 60px;
+}
+
+.post img
 {
     float: left;
+    width: 50px;
+    height: 50px;
 }
-#h {
+.post_content
+{
+    display: block;
+    margin-left: 60px;
+    margin-top: -5px;
+}
+
+.info_line
+{
+    margin-left: 60px;
+    font-weight: bold;
+    float: center;
+    margin-top: -2px;
+    margin-bottom: -8px
+}
+
+.info_bottom
+{
+    position: relative;
     float: right;
+    height: 1em;
+    font-size: .75em;
+    font-style: italic;
+    color: gray;
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
+
+b
+{
+    font-weight: bold;
+}
+
 .first
 {
-/*	margin-top:15px;
+/*  margin-top:15px;
 */}
 .last
 {
-	margin-bottom: 70px;
+    /*margin-bottom: 5px;*/
+   
+}
+.post_content span:nth-of-type(2)
+{
+    /*display:inline;*/
+    display:none;
+}
+.more_trigger, .less_trigger
+{
+    padding-left: 1em;
+    color: teal;
+    font-size: .75em;
+    font-style: italic;
+}
+
+.post p span span:hover {
+    text-decoration: underline;
 }
