--- a/events.bak.css
+++ b/events.bak.css
@@ -2,30 +2,36 @@
     overflow: hidden;
 }
 
-/*
 #events_wrapper
 {
     height:75%;
 }
+/*
+#event_map
+{
+    height: 30% !important;
+}
+#event_map:focus
+{
+    height: 70% !important;   
+}
 */
-
-#event_form, #event_list, #event_list_rrc
+#event_form, #event_list
 {
 	position:fixed !important;
     width: 100%;
-/*	height: 23.5%;*/
-    height:60%;
+	height: 23.5%;
 }
 
-#event_form, #event_list, #event_list_rrc {
-/*    top: 70%;*/
-    top:40%;
+#event_form, #event_list {
+    top: 70%;
 }
 
 #event_form
 {
 	background-color: #000;
 	color: #fff;
+    height:30%;
 }
 
 #event_list
@@ -43,7 +49,6 @@
     padding: 0;
     overflow-y: scroll;
     width: 105.5%;
-    left:105.5%;
 }
 
 .list_marker
@@ -61,32 +66,33 @@
 #list_content
 {
 /*    padding-top:10px;*/
-    font-size: 1.2em;
+    font-size: 1em;
     padding-bottom:0px;
 }
 #time
 {
-    font-size: 1em;   
+    font-size: .75em;   
 }
 .list-marker
 {
     position: relative;
+    
 }
 
 .list_marker div
 {
+
     width:93%;
     background-color: #fff;
     padding: 0;
-    height:30%;
 }
 .list_marker img
 {
     float:left;
     padding:0;
     margin: 0px;
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 32px;
 }
 #event_form ul
 {
@@ -129,44 +135,14 @@ div.ui-btn:last-of-type
 }
 #list_content p
 {
-    font-size:1em;
+    font-size:0.75em;
 }
 #events_error
 {
     
 }
-
-.list_marker:last-of-type {
-    margin-bottom: 43px;
-}
-
 .selectedCampus
 {
-    background:#C0C0C0 !important;
-    color:#FF0000;
-}
-
-#events_menubar
-{
-    background-color:#C81F45;
-    width:100%;
-    height:100%;
-    margin-top:0px;
-    padding:0px;
-}
-#events_menubar ul
-{
-    height:1000%;
-    width:100%;
-    background-color:#C81F45;
-    padding:0px auto;
-}
-
-#events_menubar li
-{
-    display:inline-block;
-    padding:50px 0px;
-    width:25%;
-    border:1px solid #000;
-    text-align:center;
+    background:#000000;
+    color:#FFFFFF;
 }
