--- a/settings.css
+++ b/settings.css
@@ -51,12 +51,19 @@
 	margin-right: 1em;
 	font-weight: normal;
 }
-#profile_user_info
+#profile_user_avatar_info
 {
 	margin:20px 0;
 	padding: 0;
 	width: 100%;
 	position: relative;
+}
+#profile_user_name_info
+{
+	width: 100%;
+	border-top: 1px black solid;
+	margin: 0;
+	padding: 0;
 }
 #profile_avatar
 {
@@ -69,7 +76,9 @@
 	display: block;
 
 }
-#profile_screen_name
+#profile_screen_name, #profile_screen_name :active
 {
-	border-top: 1px solid black;
+	border: none;
+	padding-left: 10px;
+	width: 100%;
 }
