--- a/social_proto.css
+++ b/social_proto.css
@@ -30,11 +30,17 @@
     margin-left: 60px;
 }
 
-.post img
+.post .left img
 {
     float: left;
     width: 50px;
     height: 50px;
+}
+
+.instagram_image
+{
+    width: 68%;
+    margin: 0 0 10px 10px;
 }
 .post_content
 {
