Added YouTube to posts, addressed some format issues with posts

--- a/social_proto.css
+++ b/social_proto.css
@@ -4,14 +4,14 @@
     /*border-top: 1px solid #e0e0e0;*/
     /*box-shadow: 5px 5px 5px #888888;*/
     border-bottom: solid 1px #e0e0e0;
-    padding: 10px 10px 25px 10px;
+/*    padding: 10px 10px 25px 10px;*/
     margin-top: 10px;
     background-color: white;
 }
 .post_user_name
 {
     display:inline;
-    margin-left: 50px;
+/*    margin-left: 50px;*/
 }
 
 .post_user_name
@@ -27,9 +27,13 @@
     font-style: italic;
     color: gray;
     margin-top: 5px;
-    margin-left: 60px;
+/*    margin-left: 60px;*/
 }
-
+.post_entry
+{
+    margin-left: 60px;
+    width: 70%;
+}
 .post .left img
 {
     float: left;
@@ -39,19 +43,19 @@
 
 .instagram_image
 {
-    width: 68%;
-    margin: 0 0 10px 10px;
+    width: 100%;
+/*    margin: 0 0 10px 10px;*/
 }
 .post_content
 {
     display: block;
-    margin-left: 60px;
+/*    margin-left: 60px;*/
     margin-top: -5px;
 }
 
 .info_line
 {
-    margin-left: 60px;
+/*    margin-left: 60px;*/
     font-weight: bold;
     float: center;
     margin-top: -2px;
