--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ body {
 	background-color: #C81F45;
 	color: #FFF;
 	width: 100%;
-    top: -1;
+/*    top: -1;*/
 	/*height: 10%;*/
 	text-align: center;
 }
