--- a/events.css
+++ b/events.css
@@ -2,23 +2,24 @@
     overflow: hidden;
 }
 
-/*
-#events_wrapper
-{
-    height:75%;
+#events_wrapper {
+    height: 50%;
+    padding: 0;
+    position : absolute !important;
+    top : 40px !important;
+    right : 0;
+    bottom : 40px !important;
+    left : 0 !important;
 }
-*/
 
 #event_form, #event_list, #event_list_rrc
 {
 	position:fixed !important;
     width: 100%;
-/*	height: 23.5%;*/
     height:60%;
 }
 
 #event_form, #event_list, #event_list_rrc {
-/*    top: 70%;*/
     top:40%;
 }
 
@@ -49,7 +50,6 @@
 .list_marker
 {
  	width: 97%;
-/*    height: 23.5%;*/
 	margin: 0px 0 0 0;
 	padding: 0px;
     background-color:#FFF;
@@ -60,7 +60,6 @@
 
 #list_content
 {
-/*    padding-top:10px;*/
     font-size: 1.2em;
     padding-bottom:0px;
 }
