--- a/main.css
+++ b/main.css
@@ -24,11 +24,14 @@ body {
 	background-color: #C81F45;
 	color: #FFF;
 	width: 100%;
-/*    top: -1;*/
-	/*height: 10%;*/
 	text-align: center;
 }
 
+.header div a img
+{
+	margin:0;
+	padding: 0;
+}
 
 .right { 
 	float:right !important;
@@ -40,8 +43,16 @@ body {
 
 .footer {
 	width: 100%;
-	height: 33px;
+	height: 50px;
 
+}
+.footer img
+{
+    width: 40px;
+}
+.menubutton
+{
+    float: right;
 }
 
 .menubar {
